--- a/stages/monitoring/variables/checks.yaml
+++ b/stages/monitoring/variables/checks.yaml
@@ -410,10 +410,21 @@ production:
       - telegram
       - alert_fatigue
   - name: explosions_zp
-    state: present
+    state: absent
     plugin: check_ua_explosions
     argument: "12"
     interval: 15m
+    description: Check for reported explosions in Zaporizhzhia
+    hostname: garage.rcmd.space
+    notify:
+      - telegram
+      - gotify_disaster
+      - alert_fatigue
+  - name: explosions_zp_new
+    state: present
+    plugin: check_zp_explosions
+    argument: "/root/data/ivan_fedorov_zp/posts.json"
+    interval: 3m
     description: Check for reported explosions in Zaporizhzhia
     hostname: garage.rcmd.space
     notify:
