--- a/stages/monitoring/variables/checks.yaml
+++ b/stages/monitoring/variables/checks.yaml
@@ -11,7 +11,7 @@ production:
   - name: storage_disk_health
     state: present
     plugin: check_promql
-    argument: 'smartctl_device_smart_status==0'
+    option: 'smartctl_device_smart_status == 0'
     warningThreshold: '1'
     criticalThreshold: '2'
     interval: 1m
@@ -25,7 +25,7 @@ production:
   - name: storage_disk_temperature
     state: present
     plugin: check_promql
-    argument: 'smartctl_device_temperature>55'
+    option: 'smartctl_device_temperature > 55'
     warningThreshold: '1'
     criticalThreshold: '3'
     interval: 1m
