--- a/stages/monitoring/variables/checks.yaml
+++ b/stages/monitoring/variables/checks.yaml
@@ -88,7 +88,7 @@ production:
   - name: provisioning
     state: present
     plugin: check_file
-    argument: /etc/default/earlystageconfigs
+    option: /etc/default/earlystageconfigs
     interval: 15s
     description: Provisioning file
     hostname: garage.rcmd.space
@@ -113,7 +113,7 @@ production:
   - name: webdav_filesystem
     state: present
     plugin: check_file
-    argument: /var/storage/wastebox/tiredsysadmin.cc/podcasts/JMGODIER.xml
+    option: /var/storage/wastebox/tiredsysadmin.cc/podcasts/JMGODIER.xml
     interval: 15s
     description: Enсrypted webdav mount
     hostname: garage.rcmd.space
@@ -125,7 +125,7 @@ production:
   - name: gocryptfs_config
     state: present
     plugin: check_file
-    argument: /var/storage/smallwastebox/encrypted/gocryptfs.conf
+    option: /var/storage/smallwastebox/encrypted/gocryptfs.conf
     interval: 15s
     description: Decrypted webdav mount
     hostname: garage.rcmd.space
@@ -327,7 +327,7 @@ production:
   - name: wiki_pictures
     state: present
     plugin: check_file
-    argument: /var/storage/wastebox/tiredsysadmin.cc/media/pics/IMG_20230308_134654_494-4hlt6piqgba2xsypulrslb6eyhsz.jpg
+    option: /var/storage/wastebox/tiredsysadmin.cc/media/pics/IMG_20230308_134654_494-4hlt6piqgba2xsypulrslb6eyhsz.jpg
     interval: 1m
     flowOperator: downwards
     description: Wiki picture storage
@@ -611,7 +611,7 @@ fermium:
   - name: snapraid_parity
     state: present
     plugin: check_file
-    argument: /mnt/snapraid/parity1/snapraid.parity
+    option: /mnt/snapraid/parity1/snapraid.parity
     interval: 15s
     description: Snapraid parity
     notify:
@@ -620,7 +620,7 @@ fermium:
   - name: snapraid_content
     state: present
     plugin: check_file
-    argument: /mnt/snapraid/data1/.snapraid.content
+    option: /mnt/snapraid/data1/.snapraid.content
     interval: 15s
     description: Snapraid content
     notify:
